# catkin_ws

./: .gitignore  remove_this-jetson_nano.bashrc  remove_this-workstation.bashrc
src/arduino/realsense_rover_arduino/: realsense_rover_arduino.ino
src/arduino/robotic_rover_v2_arduino/: robotic_rover_v2_arduino.ino
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/hector_slam/hector_slam_launch/launch/: tutorial.launch
src/hector_slam/hector_slam_launch/rviz_cfg/: mapping_demo.rviz
src/mpu_6050_driver/scripts/: imu_node.py  tf_broadcaster_imu.py
src/realsense-ros/realsense2_camera/: package.xml
src/realsense-ros/realsense2_camera/launch/: opensource_tracking.launch  opensource_tracking_online.launch  opensource_tracking_tk_localization.launch
src/robotic_rover_v2/: CMakeLists.txt  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  package.xml
src/robotic_rover_v2/config/: controllers.yaml  joint_limits.yaml  rviz_config.rviz
src/robotic_rover_v2/launch/: display.launch  gazebo.launch  hector_mapping.launch  localize.launch  localize2.launch  move_base.launch  odomtransformer.launch  robotic_rover_navigation.launch  robotic_rover_remote.launch  rover_mapping.launch  rover_realsense_localization.launch  rover_realsense_mapping.launch  rover_teleop.launch  skid_steer.launch  tutorial.launch
src/robotic_rover_v2/launch/includes/: description.launch.xml
src/robotic_rover_v2/maps/: 1647959572686094.pcd  1648735076006212.pcd  apartment_map.yaml  my_map_1.pgm  my_map_1.yaml  outside_map.yaml  room.pgm  room.yaml  rs_map.pgm  rs_map.yaml
src/robotic_rover_v2/meshes/: FR_link.STL  PC_link.STL  RL_link.STL  RR_link.STL  TC_link.STL  base_link.STL
src/robotic_rover_v2/nodes/: rover_odom.cpp
src/robotic_rover_v2/param/: dwa_local_planner_params.yaml  dwa_local_planner_params.yaml.save
src/robotic_rover_v2/rviz/: mapping_demo.rviz  navigation.rviz  realsense_rover_localization.rviz  realsense_rover_mapping.rviz
src/robotic_rover_v2/urdf/: robotic_rover_v2.csv  robotic_rover_v2.urdf
src/trial_robot/: CMakeLists.txt  package.xml
src/trial_robot/launch/: display.launch  gazebo.launch
src/trial_robot/meshes/: base_link.STL  left_link.STL  right_link.STL
src/trial_robot/urdf/: trial_robot.csv  trial_robot.urdf
src/trial_robot_v2/: CMakeLists.txt  package.xml
src/trial_robot_v2/launch/: display.launch  gazebo.launch
src/trial_robot_v2/meshes/: base_link.STL  left_link.STL  right_link.STL
src/trial_robot_v2/urdf/: trial_robot_v2.csv  trial_robot_v2.urdf
src/ydlidar_ros/launch/: X2L.launch  lidar.launch
